<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_chooseSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_season"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_seasonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_chooseSeason">

        <RadioButton
            android:id="@+id/rb_s01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s01"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_s02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s02"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_s03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s03"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_s04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s04"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_s05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s05"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_seasonGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>