<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_black"
    tools:context=".presentation.ui.fragments.characters.detail.CharacterDetailFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/loader_morty"
        android:indeterminateOnly="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_image_character"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:ignore="ContentDescription"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_nameUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:text="@string/name"
            android:textColor="@color/gray"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:textColor="@color/white"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            tools:text="Rick Morty" />

        <TextView
            android:id="@+id/tv_genderUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:text="@string/gender"
            android:textColor="@color/gray"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:textColor="@color/white"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            tools:text="Male" />

        <TextView
            android:id="@+id/tv_statusUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:text="@string/status"
            android:textColor="@color/gray"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:textColor="@color/white"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            tools:text="Alive" />

        <TextView
            android:id="@+id/tv_speciesUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:text="@string/species"
            android:textColor="@color/gray"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:textColor="@color/white"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            tools:text="Human" />

        <TextView
            android:id="@+id/tv_locationUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:text="@string/location"
            android:textColor="@color/gray"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLine"
            android:textColor="@color/white"
            android:textSize="@dimen/middle"
            android:textStyle="bold"
            tools:text="Citadel of Ricks" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>